modified text overflow bug

--- a/meemo-client/src/pages/dashboard/styles/TodoList.module.scss
+++ b/meemo-client/src/pages/dashboard/styles/TodoList.module.scss
@@ -108,7 +108,7 @@
 
       .todo_container {
         width: 90%;
-        height: 100%;
+        height: 96%;
         @include flex_col;
         @include align_center;
         margin-bottom: 10px;
@@ -124,6 +124,7 @@
           height: 40px;
           background-color: white;
           border-bottom: 1px solid $gray;
+          padding-bottom: 7px;
           margin-bottom: 7px;
 
           .todo_div {
@@ -132,9 +133,8 @@
             @include align_center;
 
             .todo_text {
-              width: 90%;
-              text-overflow: ellipsis;
-              white-space: nowrap;
+              width: max-content;
+              word-break: break-all;
             }
           }
         }
